fix height and spacing on name class

--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ section {
 
 .name  {
     font-weight: 700;
+    line-height: 5rem;
     -webkit-animation: growth 3s;
     -moz-animation: growth 3s;
     -ms-animation: growth 3s;
@@ -505,24 +506,6 @@ img {
         font-size: 1.5rem;
         margin: 0.625rem;
     }
-    /* .toggle {
-        width: 40px;
-        height: 40px;
-        background: url(images/menu.png);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: 30px;
-        cursor: pointer;
-    }
-    .toggle.active {
-        width: 40px;
-        height: 40px;
-        background: url(images/close.png);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: 25px;
-        cursor: pointer;
-    } */
 
     .header__toggle span {
         display: block;
@@ -613,5 +596,9 @@ img {
     }
     section {
         padding: 6.25rem 1.25rem;
+    }
+    .name  {
+        font-size: 3rem;
+        line-height: 3rem;
     }
 }
